--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+altgraph==0.17.4
+packaging==23.2
+pyinstaller==6.1.0
+pyinstaller-hooks-contrib==2023.10
 PyQt6==6.5.3
 PyQt6-Qt6==6.5.3
 PyQt6-sip==13.6.0
